--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/supabase-js": "^2.45.3",
     "change-case": "^5.4.4",
     "crc": "^4.3.2",
+    "geolib": "^3.3.4",
     "hono": "4.5.5",
     "openai": "^4.58.1",
     "remeda": "^2.12.0",
