--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,10 @@ main = "src/index.ts"
 compatibility_date = "2024-09-03"
 compatibility_flags = ["nodejs_compat"]
 
+[[kv_namespaces]]
+binding = "COORDINATES_KV"
+id = "b9c871982c8c48528ba916d06613287c"
+
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
 # rather than the end user may result in better performance.
